# DeAI

./: .gitignore  README.md  dfx.json
.specstory/history/: 2025-03-15_11-29-restructuring-readme-for-clarity-and-presentation.md
anda-bot-guide/: README.md
azle-llm/: README.md  package-lock.json  package.json
azle-llm/src/backend/: index.ts
azle-llm/src/frontend/: package.json
azle-llm/src/frontend/src/: App.tsx  markdown-styles.css
content/: 01_llm-canister.md  02_icp-ninja.md  03_create-chatbot.md  04_demo-lookup-agent.md  README.md
eliza-eth-wallet/: README.md
examples/: README.md
examples/azle-llm/: README.md
examples/azle-llm/src/frontend/: vite.config.js
examples/llm_canister/: README.md
examples/rust-openai/: Cargo.toml  dfx.json  package-lock.json  package.json
llm-chatbot-icpninja/: README.md
llm_canister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
llm_canister/scripts/: setup.sh
llm_canister/src/backend/: Cargo.toml
llm_canister/src/backend/src/: lib.rs
llm_canister/src/frontend/: index.html  package.json
llm_canister/src/llm_canister_backend/: Cargo.toml
llm_canister/src/llm_canister_frontend/: package.json
motoko-llm-canister/src/project_backend/: main.mo
rust-openai/: README.md
rust-openai/src/rust-openai-frontend/: index.html  package.json
rust-openai/src/rust_openai_backend/: Cargo.toml
rust-openai/supabase/: config.toml
src/project_backend/: How_to_Interact_with_Your_Native_LLM_Canister.md  LLM_Integration_Canister_Documentation.md  Types.mo  main.mo
(+14 files in other folders)
